# FOX

./: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  INDEX_SAFE_TEST_MODE.md  INFORME_ANALISIS_ECU_FOX_vs_ATC8110.md  INFORME_BRAKE_SW.md  INFORME_MOVIMIENTO_MOTORES.md  Makefile  Prueba.csv  README.md  README_SAFE_TEST_MODE.md  SAFE_TEST_MODE_CAMBIOS.md  SAFE_TEST_MODE_FINAL_SUMMARY.txt  SAFE_TEST_MODE_QUICKSTART.md  STATUS_REPORT_20260116.md  analisis_ecu_fox.md  auto_config_can.sh  bruteforce_can.sh  check_status.sh  config_can_acm1.sh  config_can_correct.sh  deploy_changes.ps1  deploy_changes.sh  deploy_to_ecu.yml  desktop.ini  diag_emuc.sh  fix_all_filesystem.ps1  fix_and_run.sh  fix_filesystem.ps1  fix_filesystem.sh  fox.sh  fox_ecu_deploy.tar  hard_reset_can.sh  manage_fox.sh  manual_deploy.ps1  monitor_motors.sh  reload_usb.sh  repair_can.sh  repair_can_v2.sh  restart.sh  restore_final.sh  (+10 more)
docs/HARDWARE/Analog/PEX-DA16/ixpci/: .ixpci.remove.swp  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.conf  Makefile.in  config.status  configure  configure.ac  ixpci-inst.service  ixpci.inst  ixpci.remove  mkdist  mkdoc  regen  subs
docs/HARDWARE/Analog/PEX-DA16/ixpci/driver/: ._pci2602u.c.swp  .cache.mk  Makefile  Makefile_linux24x.am  Makefile_linux24x.in  Module.symvers  _pci.c  _pci1002.c  _pci1202.c  _pci1602.c  _pci1800.c  _pci2602u.c  _pci822.c  _pci826.c  _pcid96_d128.c  _pcie8622.c  _pcifc16.c  _pcilanner.c  _pcim512.c  _pcip16x16.c  _pcip8r8.c  _proc.c  (+3 more)
ecu_atc8110/: CMakeLists.txt  README.md  legacy_control.c  motor_control_main.cpp  test_adc_direct.cpp  test_analog_inputs.cpp  test_ao_main.cpp  test_digital_io.cpp  test_simple_adc.cpp
ecu_atc8110/adquisicion_datos/: _pci1002.h  _pci1800.h  _pci2602u.h  _pci822.h  _pcitmc12.h  ao_output.c  ao_output.h  pex1202_driver.hpp  pex1202l.cpp  pex1202l.hpp  pex_device.hpp  pexda16.cpp  pexda16.hpp  pexda16_demo.cpp  sensor_config.hpp  sensor_manager.cpp
ecu_atc8110/common/: bms_data_logger.cpp  bms_data_logger.hpp  can_simulator.hpp  can_traffic_logger.cpp  can_traffic_logger.hpp  can_validator.cpp  can_validator.hpp  csv_logger_base.cpp  csv_logger_base.hpp  data_logger_manager.cpp  data_logger_manager.hpp  error_catalog.hpp  error_logger.cpp  error_logger.hpp  error_publisher.cpp  error_publisher.hpp  error_system.cpp  error_system.hpp  imu_data_logger.cpp  imu_data_logger.hpp  logger.cpp  logger.hpp  logging.hpp  motor_data_logger.cpp  motor_data_logger.hpp  motor_timeout_detector.hpp  power_manager.cpp  power_manager.hpp  rt_context.hpp  rt_scheduler.hpp  rt_thread.hpp  sensor_data_logger.cpp  sensor_data_logger.hpp  session_manager.cpp  session_manager.hpp  system_data_logger.cpp  system_data_logger.hpp  system_mode_manager.hpp  system_supervisor.cpp  system_supervisor.hpp  (+3 more)
ecu_atc8110/comunicacion_can/: can_bms_handler.cpp  can_protocol.hpp  socketcan_interface.cpp
ecu_atc8110/config/: ecu_config.yaml
ecu_atc8110/control_vehiculo/: ao_control.c  ao_control.h  battery_manager.cpp  controllers.hpp  safe_motor_test.hpp  traction_control.cpp  traction_control.hpp  traction_control_wrapper.cpp
ecu_atc8110/docs/: CAN_PERSISTENT_SETUP.md  DEPLOYMENT.md  DEPLOY_TO_CAR.md  ECU_FOX_rc30.3_test_ao_patch.md  INTEGRATION_TEST_PLAN.md  PRIORIDAD1_IMPLEMENTATION_PLAN.md  README.md  arquitectura.md  can_initialization_guide.md  implementation_plan.md  ssh_can_diagnostics.md  task.md  walkthrough.md
ecu_atc8110/docs/tareas_migracion/: plan_migracion_detallado.md
ecu_atc8110/examples/: safe_motor_test_example.cpp
ecu_atc8110/logica_sistema/: main.cpp  rt_threads.hpp  state_machine.hpp  supervisor.cpp
ecu_atc8110/scripts/: README.md  can_startup.sh  diagnose_motor_can.sh  diagnose_motor_e2e.sh  fox-can.service  install_can_service.sh  run_ecu.sh  run_motor_control.sh  unify_plans.ps1
ecu_atc8110/tests/: CMakeLists.txt  README.md  TODO_UPGRADE.md  ecu_test_framework.hpp  ecu_tests_main.cpp  ecu_tests_main_v2.cpp  test_suites.hpp  test_suites_v2.hpp  test_traction_control.cpp
ecu_atc8110/tests/backends/: backend_factory.hpp  ican_backend.hpp  sim_backend.hpp  socketcan_backend.hpp
ecu_atc8110/tests/framework/: cli_parser.hpp  clock_provider.hpp  test_context.hpp  timing_metrics.hpp
ecu_atc8110/tests/unit/: README.md
ecu_atc8110/tools/: CMakeLists.txt  README_CAN_DIAGNOSTICS.md  can_diagnostic.cpp  sensor_diagnostic.cpp  test_ixpio.cpp
ecu_atc8110/tools/ecu_auto_mapper/: ecu_auto_mapper.cpp
ecu_atc8110/tools/pex_da16_auto_mapper/: Makefile  README.md  pex_da16_auto_mapper.cpp
ecu_atc8110/tools/pex_da16_diag/: Makefile  README.md  pex_da16_diag.cpp
ecu_atx1610/: CMakeLists.txt  README.md
ecu_atx1610/adquisicion_datos/: _pci1202.h  _pci1602.h  _pcie8622.h  _pcifc16.h  _pcilanner.h  _pcim512.h  _pcip8r8.h  ixpci.h  pcidaq.h  pex1202_driver.hpp  pex1202l.cpp  pexda16.cpp  pexda16.hpp  sensor_manager.hpp
ecu_atx1610/common/: bms_data_logger.cpp  bms_data_logger.hpp  csv_logger_base.cpp  error_logger.cpp  imu_data_logger.hpp  interfaces.hpp  logging.hpp  motor_data_logger.cpp  motor_data_logger.hpp  sensor_data_logger.hpp  session_manager.cpp  system_data_logger.cpp  types.hpp
ecu_atx1610/comunicacion_can/: can_bms_handler.cpp  can_bms_handler.hpp  can_initializer.hpp  can_manager.hpp  can_protocol.hpp  socketcan_interface.cpp  socketcan_interface.hpp
ecu_atx1610/config/: ecu_config.yaml
ecu_atx1610/control_vehiculo/: battery_manager.cpp  suspension_controller.cpp  traction_control.cpp
ecu_atx1610/docs/: arquitectura.md
ecu_atx1610/docs/tareas_migracion/: task.md
ecu_atx1610/examples/: csv_logging_example.cpp
ecu_atx1610/interfaces/: cli_interface.cpp  cli_interface.hpp  pilot_interface.cpp  pilot_interface.hpp  updater.cpp  updater.hpp  web_diagnostic.cpp  web_diagnostic.hpp
ecu_atx1610/logica_sistema/: main.cpp  state_machine.hpp  supervisor.cpp
ecu_atx1610/scripts/: README.md  diagnose_can.sh  setup_can.sh
ecu_atx1610/tests/: README.md
ecu_atx1610/tests/integration/: README.md
ecu_atx1610/tests/unit/: README.md
ecu_atx1610/tools/: README_CAN_DIAGNOSTICS.md  can_diagnostic.cpp
(+693 files in other folders)
