SUBDIRS = pcitmc12 pcip16x16 pcip8r8 pci1800 pci1202 pci1002_pex1002 pcim512 pcifc16 pcilanner pci826 pci1602 pcie8622 pcid96_d128 pci2602u

bin_PROGRAMS = list
list_SOURCES = list.c
AM_CPPFLAGS = -I. -I../include 

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
