bin_PROGRAMS =dio gid get_dio_jump_sta dio_port_config_soft ao ai magicscan demo
dio_SOURCES = dio.c
gid_SOURCES = gid.c
get_dio_jump_sta_SOURCES = get_dio_jump_sta.c
dio_port_config_soft_SOURCES = dio_port_config_soft.c
ao_SOURCES = ao.c
ai_SOURCES = ai.c
magicscan_SOURCES = magicscan.c
demo_SOURCES = demo.c

AM_CPPFLAGS = -I. -I../../include

#Read the root Makefile.am
#indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
