bin_PROGRAMS = dio_config card_id change_of_status change_of_status_int pattern_match do_pattern
dio_config_SOURCES = dio_config.c
#dio_SOURCES = dio.c
card_id_SOURCES = card_id.c
change_of_status_SOURCES = change_of_status.c
change_of_status_int_SOURCES = change_of_status_int.c
pattern_match_SOURCES = pattern_match.c
do_pattern_SOURCES = do_pattern.c
AM_CPPFLAGS = -I. -I../../include 

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
