bin_PROGRAMS = card_id dio ao aoh polling_ai polling_aih polling_ai_scan polling_ai_scanh pacer_aih #test

#test_SOURCES = test.c calibration.c
card_id_SOURCES = card_id.c
dio_SOURCES = dio.c
ao_SOURCES = ao.c
aoh_SOURCES = aoh.c
polling_ai_SOURCES = polling_ai.c
polling_aih_SOURCES = polling_aih.c
polling_ai_scan_SOURCES =polling_ai_scan.c
polling_ai_scanh_SOURCES = polling_ai_scanh.c
pacer_aih_SOURCES = pacer_aih.c
AM_CPPFLAGS = -I. -I../../include 

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
