bin_PROGRAMS =dio_hw dio_sw gid get_dio_jump_sta timer0 timer1 
dio_hw_SOURCES = dio_hw.c
dio_sw_SOURCES = dio_sw.c
gid_SOURCES = gid.c
get_dio_jump_sta_SOURCES = get_dio_jump_sta.c
timer0_SOURCES = timer0.c
timer1_SOURCES = timer1.c

AM_CPPFLAGS = -I. -I../../include

#Read the root Makefile.am
#indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
