bin_PROGRAMS = dio read_write_sram read_sram write_sram battery_status
dio_SOURCES = dio.c
read_write_sram_SOURCES = read_write_sram.c
read_sram_SOURCES = read_sram.c
write_sram_SOURCES = write_sram.c
battery_status_SOURCES = battery_status.c

AM_CPPFLAGS = -I. -I../../include 

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
