SUBDIRS = pio821 piod144 piod24 piod48_pexd48 piod56 piod64 piod96 pioda16 piso725 piso730 piso730a pisop32c32 pisop8r8 pisop16r16_pexp8r8_p16r16 pisop32a32 piod168 pisop64 pisoa64 pisoc64 pisoda2 pisops300 pisoenc600 pisoenc300 piso813

bin_PROGRAMS = list
list_SOURCES = list.c
AM_CPPFLAGS = -I. -I../include

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
