bin_PROGRAMS = ai_soft ai_pacer ao dio dio2 counter
ai_soft_SOURCES = ai_soft.c
ai_pacer_SOURCES = ai_pacer.c
ao_SOURCES = ao.c
dio_SOURCES = dio.c
dio2_SOURCES = dio2.c
counter_SOURCES = counter.c
AM_CPPFLAGS = -I. -I../../include

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
