bin_PROGRAMS = counter dio dio2 dio3 int int2 int3
counter_SOURCES = counter.c
dio_SOURCES = dio.c
dio2_SOURCES = dio2.c
dio3_SOURCES = dio3.c
int_SOURCES = int.c
int2_SOURCES = int2.c
int3_SOURCES = int3.c
AM_CPPFLAGS = -I. -I../../include

# Read the root Makefile.am
# indent:
#	indent -kr -ts4 -nsc -pmt *.c

CLEANFILES = *~ \#*
